# zero-to-prod

./: Cargo.toml
migrations/: 20240815070943_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
