[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }


[dev-dependencies]
reqwest = "0.11"