[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.207", features = ["derive"] }
config = "0.14.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.38"
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }

[build-dependencies]
syn = "1"


[dev-dependencies]
reqwest = "0.11"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
